<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:cardUseCompatPadding="true"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/tv_name_surah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_surah"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_name_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_translation"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv_revelation_surah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revelation_surah"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_brightness_1_24"
                    android:contentDescription="@string/constraint" />

                <TextView
                    android:id="@+id/tv_number_of_verses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verses"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="26sp"
                android:text="@string/bismillah"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_save_surah"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_selector_save"
            android:contentDescription="@string/save_surah" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ayah"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_list_ayah" />
</androidx.constraintlayout.widget.ConstraintLayout>