<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/tv_number_surah"
        style="@style/TitleFont"
        android:text="@string/number"
        android:background="@drawable/ic_baseline_brightness_1_24"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_surah"
        style="@style/TitleFont"
        android:layout_marginTop="8dp"
        android:text="@string/name_surah"
        app:layout_constraintStart_toEndOf="@+id/tv_number_surah"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_revelation_surah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/revelation_surah"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_number_surah" />

    <TextView
        android:id="@+id/tv_number_of_verses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_revelation_surah" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/verses"
        app:layout_constraintBottom_toBottomOf="@+id/tv_number_of_verses"
        app:layout_constraintStart_toEndOf="@+id/tv_number_of_verses"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_name_surah_arab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_arab"
        android:textSize="16sp"
        android:textColor="@color/purple_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>