<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingBottom="16dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/tv_number_ayah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/ic_baseline_brightness_1_24"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/number" />

        <TextView
            android:id="@+id/tv_arab_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/text_arab"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_translation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_translation"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout >